--- a/sample-next-page/package.json
+++ b/sample-next-page/package.json
@@ -23,5 +23,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "@eslint/eslintrc": "^3"
+  },
+  "eslintConfig": {
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "off",
+    "no-var": "off"
   }
+}
 }
